# rosu

./: Cargo.toml  README.md  c.toml
src/: config.rs  main.rs  osu_format.rs
src/assets/: mod.rs
src/assets/loader/: resolver.rs
src/assets/sound/: mod.rs  sound_id.rs  sound_source.rs
src/assets/sprite/: sprite_id.rs
src/game/: mod.rs  object.rs  state.rs
src/game/state/: dummy.rs  game_end.rs  game_start.rs  main_menu.rs  playing.rs  song_select.rs
src/render/: draw_param.rs
src/ui/: anchor.rs  element.rs  event.rs  mod.rs  position.rs  vector.rs
src/ui/element/: button.rs  graph.rs  text.rs  text_edit.rs
src/ui/style/: background.rs  border.rs
src/utils/: framestats.rs
tests/: osu.rs
